Refactored strings and redundant code refs #24338